@@ -7,6 +7,10 @@
 	internal function, rename python_clean_sitedir() to
 	python_clean_installation_image()
 	(ebuild-mode-keywords-kde4-base): Add get_build_type() function
+	(ebuild-mode-keywords-perl-helper): Add support for new
+	perl-helper.eclass
+	(ebuild-mode-keywords-perl-module): Remove perl-module.eclass as
+	no functions are needed anymore
 
 2010-07-09  Ulrich Mueller  <ulm@gentoo.org>
 
